--- a/bio.html
+++ b/bio.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
 
     
 
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;">Биохакинг: что это и почему в нём нуждается современный человек?&nbsp;</span></h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;"><br></span><br><span style="font-weight: normal;">Биохакинг: что это и почему в нём нуждается современный человек?&nbsp;</span></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Биохакинг возник как естественное продолжение желания человека жить долго и счастливо. Биохакингом можно назвать набор правил и привычек, следование которым, в теории, должно увеличить продолжительность и качество жизни. В идеале биохакинг должен превращать в «сверхчеловека».
 <br>
