--- a/bio.html
+++ b/bio.html
@@ -51,7 +51,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-7" href="github.io.html">
+                    <a class="nav-link link text-white display-7" href="home.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
 
     
 
